[package]
name = "strux"
version = "0.2.1"
edition = "2024"
description = "Tabular declaration of similar structs"
license = "Apache-2.0 OR MIT"
categories = ["rust-patterns"]
homepage = "https://crates.io/crates/strux"
documentation = "https://docs.rs/strux"
repository = "https://github.com/aatifsyed/strux"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", default-features = false, features = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }

[dev-dependencies]
expect-test = "1.5.1"
prettyplease = "0.2.37"
syn = { version = "2.0.110", features = ["extra-traits"] }
